# patterns

./: 2-data-problems.md  2-foundations.md  2-sources.md  Foundations.md
10-gradient/: README.md  pyproject.toml
10-gradient/scripts/: run.py
10-gradient/src/gd/: __init__.py  functions.py  optimizer.py  types.py
10-gradient/src/tarea10_gradient_descent.egg-info/: PKG-INFO  SOURCES.txt
2-datasets-foundations/: 2-foundations.md
4-distance-fn/: README.md  main.py  pyproject.toml
4-distance-fn/scripts/: distcli.py
4-distance-fn/src/distances/: __init__.py  metrics.py  utils.py
4-distance-fn/tests/: test_cli_parse.py  test_metrics.py
4-knn/src/knn/: cli.py  distances.py  model.py  neighbors.py
4-knn/src/knn/cv/: cross_validate.py  splitters.py
4-knn/src/knn/data/: __init__.py  utils.py
4-knn/src/knn/metrics/: confusion.py
4-knn/src/knn/reporting/: tables.py
4-knn/tests/: test_cv.py  test_neighbors.py
5-knn/: README.md  main.py  pyproject.toml
5-knn/scripts/: exp_iris.py
5-knn/src/knn/: __init__.py  preprocessing.py
5-knn/src/knn/cv/: __init__.py
5-knn/src/knn/data/: iris.py
5-knn/src/knn/metrics/: __init__.py  classification.py
5-knn/src/knn/reporting/: __init__.py
5-knn/tests/: test_classsification.py  test_confusion.py  test_distances.py  test_model.py
6-prob/: probability.md
7-bayes-classifier/: README.md  main.py  pyproject.toml
7-bayes-classifier/scripts/: run_experiments.py
7-bayes-classifier/src/gnb/: __init__.py  datasets.py  metrics.py  model.py  validation.py
7-bayes-classifier/tests/: test_metrics.py  test_validation.py
8-dtrees/: README.md  main.py  pyproject.toml
8-dtrees/scripts/: run_experiments.py
8-dtrees/src/dtree/: __init__.py  criteria.py  datasets.py  metrics.py  model.py  split.py  validation.py
8-dtrees/tests/: test_criteria.py  test_model.py  test_validation.py
9-algorithms/: README.md  pyproject.toml
9-algorithms/scripts/: run.py
9-algorithms/src/algorithms_classification.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
9-algorithms/src/compare/: datasets.py  experiment.py  metrics.py  models.py  preprocess.py  validation.py
