[project]
name = "gnb-project"
version = "0.1.0"
description = "Gaussian Naive Bayes from scratch with k-fold and leave-one-out validation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "scikit-learn>=1.4"
]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gnb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
