[project]
name = "dtrees"
version = "0.1.0"
description = "Decision tree from scratch (Gini) with stratified 70/30 holdout"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "scikit-learn>=1.4"
]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dtree"]

[tool.pytest.ini_options]
testpaths = ["tests"]
